# Senior-Project

./: .instructions.md  README.md  dqn.ipynb  lstm-price.ipynb  lstm.ipynb  main.ipynb  main.py  pyproject.toml
.github/skills/academic-researcher/: SKILL.md
